# MIRAI

./: .gitignore  README.md  main.py  pyproject.toml
data/: dataset.py  transform.py
envs/: base.py
example/: qwen_test.py
src/mirai/: test.py
src/mirai/models/: definitions.py
