[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirai"
version = "0.1.0"
description = "MIRAI: Metacognitive Intent-Reflective Action Integration Model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/mirai"]